fixed line spacing

--- a/main.css
+++ b/main.css
@@ -29,10 +29,12 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: 2.2em;
+    line-height: 1.3;
 }
 
 h2 {
     font-size: 1.6em;
+    line-height: 1.3;
 }
 nav {
     font-size: 16px;
